--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,15 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.12.0",
+    "axios": "^1.13.4",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.4",
+    "node-fetch": "^3.3.2",
     "openai": "^6.6.0"
   },
   "devDependencies": {
